# sapphire

./: .dockerignore  .gitignore  .workspace  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  Dockerfile  README.md  docker-compose.dex.yml  docker-compose.git-checkout.yml  docker-compose.gitsync.yml  docker-compose.remote.yml  docker-compose.yml  install-local.sh  package.json  playwright.config.ts  playwright.local.config.ts  playwright.web.config.ts  svelte.config.js  tsconfig.json  vite.config.js
.axtesys/casket/: Agent.Dockerfile
.claude/: settings.local.json
.claude/skills/deploy/: SKILL.md
.github/workflows/: publish-web-image.yml  release.yml
.scratch/enable-web-writing/: map.md
.scratch/enable-web-writing/issues/: 01-research-auth-approaches.md  02-research-git-commit-push-from-server.md  03-research-codemirror-under-sveltekit-ssr.md  04-auth-and-git-identity-model.md  05-git-persistence-and-commit-model.md  06-web-editor-shell.md  07-server-write-route-surface.md  08-web-write-concurrency-ux.md  09-web-write-test-strategy.md
.scratch/enable-web-writing/research/: 01-auth-approaches.md  02-git-commit-push.md  03-codemirror-ssr.md
.scratch/multi-concept-tiling/issues/: 01-document-pane-state-split.md  02-per-tile-header.md  03-tiling-dividers-split-close.md  04-focus-grid-navigation.md  05-satellite-views-follow-active-pane.md  06-layout-persistence.md
.scratch/wasm-shared-core/: map.md
.scratch/wasm-shared-core/issues/: 07-test-coverage-strategy.md  09-migration-sequencing.md  10-migrate-link-family.md  11-migrate-frontmatter-family.md  12-migrate-fake-backend-standins.md  13-migrate-render-derived-family.md  15-migrate-path-helpers.md  16-untwinned-ts-logic.md
crates/sapphire-core/: Cargo.toml
crates/sapphire-core/src/: config.rs  git.rs  index.rs  lib.rs  render.rs  watcher.rs  wikilink.rs
crates/sapphire-core/src/index/: frontmatter.rs
crates/sapphire-server/: Cargo.toml
crates/sapphire-server/src/: main.rs
crates/sunstone-core/: Cargo.toml
crates/sunstone-core/src/: app_state.rs  bundle.rs  config.rs  git.rs  index.rs  lib.rs  render.rs  search.rs  watcher.rs  wikilink.rs
crates/sunstone-server/: Cargo.toml
crates/sunstone-server/src/: auth.rs  main.rs  write.rs
docker/: README.md  entrypoint.sh  post-receive.example
docker/dex/: Dockerfile  config.yaml
docs/: GLOSSARY.md  deploy-web.md  editor-layout.md  focus-model.md  linking.md  okf-spec.md  testing.md
docs/adr/: 0001-codemirror-hybrid-live-preview.md  0002-flat-frontmatter-model.md  0003-structured-frontmatter-reserialization.md  0004-wikilinks-optional-secondary-name-based.md  0005-mermaid-block-rendering.md  0006-wasm-shared-core-for-frontend-logic.md
docs/architecture/: desktop-shell.md  index.md  overview.md  sunstone-core.md  sunstone-server.md  testing.md  web-frontend.md
docs/editor/: atomic-editor-patch.md  atomic-editor.md  codemirror.md  custom-extensions.md  editor-layout.md  index.md
docs/interface/: app-shell.md  focus-model.md  index.md  nav-bar.md  sidebars.md  view-state.md
docs/okf/: bundle.md  concept.md  index.md
docs/tickets/done/: add-property-text-or-list.md  backlinks-panel.md  explorer-keyboard-nav.md  in-concept-find.md  in-concept-replace.md  live-preview.md  markdown-links-navigation.md  marketing-readme-with-screenshots.md  mermaid-block-render.md  mermaid-edit-affordance.md  mermaid-error-state.md  mermaid-render-caching.md  mermaid-theme-sync.md  outline-section.md  properties-grid-navigation.md  region-focus-backbone.md  rename-and-delete-properties.md  rename-app-to-sunstone.md  retheme-to-sapphire-palette.md  retheme-to-sunstone-palette.md  split-frontmatter-out-of-editor.md  supersede-adr-0002.md  web-dockerized-deployment.md  web-extract-sapphire-core.md  (+6 more)
marketing/: index.html
patches/: @atomic-editor%2Feditor@0.4.3.patch
src/: app.css  app.d.ts  app.html  auth.ts  hooks.server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  bundle.rs  cli.rs  config.rs  index.rs  lib.rs  main.rs  paths.rs  rewrite.rs  search.rs  session.rs  slug.rs  watcher.rs  wikilink.rs
src-tauri/src/index/: frontmatter.rs  links.rs
src-tauri/src/rewrite/: engine.rs  paths.rs
src/lib/: App.svelte  DesktopShell.svelte  PageShell.svelte  anchorRewrite.test.ts  anchorRewrite.ts  chipStrip.test.ts  chipStrip.ts  citations.test.ts  citations.ts  debounce.test.ts  debounce.ts  errors.test.ts  errors.ts  frontmatter.test.ts  frontmatter.ts  fuzzy.test.ts  fuzzy.ts  highlight.test.ts  highlight.ts  keynav.test.ts  keynav.ts  links.test.ts  links.ts  listNav.test.ts  listNav.ts  outline.test.ts  outline.ts  paneLayout.ts  paneNav.test.ts  paneNav.ts  paneTitle.test.ts  paneTitle.ts  path.test.ts  path.ts  propertiesGrid.test.ts  propertiesGrid.ts  region.ts  regionGrid.test.ts  regionGrid.ts  rendered.css  (+19 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
tests/: backlinks-panel.spec.ts  bundle-index.spec.ts  citation-superscripts.spec.ts  config-state.spec.ts  critic-annotations.spec.ts  critic-changes.spec.ts  editing-autosave.spec.ts  editor-context-menu.spec.ts  editor-error-clear.spec.ts  editor-modes.spec.ts  escape-peel.spec.ts  explorer-crud-keys.spec.ts  explorer-keyboard-nav.spec.ts  export-pdf.spec.ts  external-link-open.spec.ts  fixtures.ts  focus-grid-navigation.spec.ts  frontmatter-panel.spec.ts  full-text-search.spec.ts  global-setup.web.ts  hide-tags-section-when-empty.spec.ts  in-concept-find-replace.spec.ts  key-and-tag-autocomplete.spec.ts  launcher.spec.ts  layout-persistence.spec.ts  link-auto-rewrite.spec.ts  links-navigation.spec.ts  live-preview.spec.ts  marketing-screenshots.spec.ts  mermaid-block-render.spec.ts  mermaid-edit-affordance.spec.ts  mermaid-error-state.spec.ts  mermaid-render-caching.spec.ts  mermaid-theme-sync.spec.ts  new-concept-scaffolding.spec.ts  outline-backlinks-keyboard-nav.spec.ts  outline-section.spec.ts  pane-header.spec.ts  properties-add.spec.ts  properties-chip-nav.spec.ts  (+37 more)
(+144 files in other folders)
