[workspace]
resolver = "2"
members = ["crates/sunstone-core", "crates/sunstone-server", "src-tauri"]

# Shared dependency versions for all workspace members. Members opt in with
# `dep = { workspace = true }`. Tauri-only deps stay in `src-tauri/Cargo.toml`.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
notify = "6"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
serde_yaml = "0.9"
dirs = "5"
# Markdown -> HTML rendering for the web server-side render (slice: web-server-side-render)
comrak = "0.29"
# Anchor-href rewriting in rendered HTML (link-resolution markers -> viewer nav)
regex = "1"
