[package]
name = "sapphire"
version = "0.14.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sapphire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Filesystem walking (respects .gitignore, fast) — tree + full-text search
ignore = "0.4"
# Filesystem change watching (slice: editing-autosave-watcher)
notify = "6"
# Full-text search backend (ripgrep libraries, no external binary) — slice: full-text-search
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
# YAML frontmatter parsing — slices: frontmatter panel, bundle index
serde_yaml = "0.9"
# OS app-data / config directory resolution — slice: config-theme-state-store
dirs = "5"

