[package]
name = "sunstone"
version = "0.16.0"
description = "Sunstone — a CLI-launched markdown editor with first-class Open Knowledge Format (OKF) support"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sunstone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Sunstone's reusable domain logic (bundle, index, rewrite, search, watcher).
# The desktop shell is now a thin Tauri wrapper over this crate.
sunstone-core = { path = "../crates/sunstone-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Native save-file chooser for the print window's "Save as PDF" button.
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }

# Direct (dialog-free) PDF export from the print window uses each platform's
# webview PDF API. Versions match what wry already resolves so no duplicate
# native bindings are pulled in. Linux is the tested path; macOS/Windows are
# best-effort (implemented to the documented API, not runtime-verified here).
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "=2.0.2"
gtk = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKPDFConfiguration", "block2"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSError"] }
block2 = "0.6"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = "0.61"

