[package]
name = "sapphire-server"
version = "0.14.0"
description = "Read-only HTTP server exposing a Sapphire Bundle over sapphire-core (Sapphire Web)"
authors = ["you"]
edition = "2021"

[[bin]]
name = "sapphire-server"
path = "src/main.rs"

[dependencies]
# Sapphire's reusable domain logic — the SAME bundle/index code the desktop uses.
sapphire-core = { path = "../sapphire-core" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { workspace = true }
serde_json = { workspace = true }
