[package]
name = "sunstone-server"
version = "0.14.0"
description = "Read-only HTTP server exposing a Sunstone Bundle over sunstone-core (Sunstone Web)"
authors = ["you"]
edition = "2021"

[[bin]]
name = "sunstone-server"
path = "src/main.rs"

[dependencies]
# Sunstone's reusable domain logic — the SAME bundle/index code the desktop uses.
sunstone-core = { path = "../sunstone-core" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
# Wrap a broadcast receiver as a Stream for the SSE (`/api/events`) route.
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { workspace = true }
serde_json.workspace = true
hmac = "0.13.0"
sha2 = "0.11.0"
base64 = "0.22.1"
